Popravi neke IntelliJ idea warninge